samples/OK/return1.php
<?php
declare(strict_types=1);
function b(int $i) : int
{
    return ($i*6)+4;
}
$a = b(1);
return $a;
?>
