samples/SEMANTIC_ERROR/return_int_from_float_func.php
<?php
declare(strict_types=1);
function foo(int $i) : float
{
    //ERROR[4]
    return $i;
}